force-app/main/default/objects/vlocity_ps__AccountBalance__c/vlocity_ps__AccountBalance__c.object-meta.xml
<CustomObject>
    <description>Represents a historical snapshot of charges, credits and resulting balance for an account at a point in time. Populate this data from a billing system.</description>
    <label>Account Balance</label>
    <nameField>
        <label>Account Balance Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Balances</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>