force-app/main/default/objects/vlocity_ps__AccountBalance__c/fields/vlocity_ps__AccountId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__AccountId__c</fullName>
    <label>Client Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Balances</relationshipLabel>
    <relationshipName>AccountRegisters</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>