force-app/main/default/objects/vlocity_ps__AccountBalance__c/fields/vlocity_ps__Credit__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__Credit__c</fullName>
    <label>Credits</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>