force-app/main/default/objects/vlocity_ps__AccountBalance__c/fields/vlocity_ps__InventoryItem__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__InventoryItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inventory Item</label>
    <referenceTo>vlocity_ps__InventoryItem__c</referenceTo>
    <relationshipLabel>Account Balances</relationshipLabel>
    <relationshipName>InventoryItem</relationshipName>
    <type>Lookup</type>
</CustomField>