force-app/main/default/objects/vlocity_ps__AccountBalance__c/fields/vlocity_ps__Program__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program</label>
    <referenceTo>vlocity_ps__PublicProgram__c</referenceTo>
    <relationshipLabel>Account Balances</relationshipLabel>
    <relationshipName>Program</relationshipName>
    <type>Lookup</type>
</CustomField>